infrastructure/platform/nas/seaweedfs-backup/httproute-master.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweedfs-backup-master
  namespace: seaweedfs-backup
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "master.seaweedfs-backup.${domain_wahoo_li:=wahoo.li}"
  - "master.seaweedfs-backup.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: seaweedfs-backup-master
      port: 9333
