infrastructure/platform/nas/seaweedfs-backup/httproute-s3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweedfs-backup-s3
  namespace: seaweedfs-backup
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "s3.seaweedfs-backup.${domain_wahoo_li:=wahoo.li}"
  - "s3.seaweedfs-backup.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: seaweedfs-backup-filer
      port: 8333
